# AGE

./: CMakeLists.txt
include/SDL/: SDLAudio.h  SDLDefaultScreen.h  SDLInput.h  SDLRenderer.h  SDLResourceManager.h  SDLWindow.h
include/core/: Audio.h  AudioComponent.h  AudioComponentManager.h  ComponentManager.h  DrawComponent.h  DrawComponentManager.h  EmitterComponent.h  EmitterComponentManager.h  Engine.h  Entity.h  EntityComponentManager.h  Font.h  Input.h  Panel.h  Physics.h  PhysicsComponent.h  PhysicsComponentManager.h  Renderer.h  ResourceManager.h  Screen.h  ScreenManager.h  Texture.h  Utils.h  Window.h  globals.h
include/extras/: kenney_bold_font.h
lib/linux/: libSDL2_image-2.0.so.0  libSDL2_mixer-2.0.so.0
lib/mac/: libSDL2.dylib  libSDL2_image.dylib  libSDL2_mixer.dylib  libSDL2_ttf.dylib
lib/win/: SDL2_image.lib  SDL2_mixer.lib  SDL2_ttf.lib  SDL2main.lib
source/: libAGE_test.cpp
source/SDL/: SDLAudio.cpp  SDLInput.cpp  SDLRenderer.cpp  SDLResourceManager.cpp  SDLWindow.cpp
source/core/: AudioComponent.cpp  AudioComponentManager.cpp  DrawComponent.cpp  DrawComponentManager.cpp  EmitterComponent.cpp  EmitterComponentManager.cpp  Engine.cpp  Entity.cpp  EntityComponentManager.cpp  PhysicsComponent.cpp  PhysicsComponentManager.cpp
